backend/tests/corpus/shadowing-neg-000.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  labels:
    cape-test-case: shadowing-neg-000
    owner-team: team-gamma
  name: img-policy-clean-shadowing-neg-000
spec:
  match:
    kinds:
    - apiGroups:
      - ''
      kinds:
      - Pod
    namespaces:
    - shadow-ns-shadowing-neg-000-0
    - shadow-ns-shadowing-neg-000-1
    - shadow-ns-shadowing-neg-000-2
  parameters:
    repos:
    - mycompany.com/
